[package]
name = "anystr"
version = "0.1.1"
edition = "2021"
description = "An abstraction over string encoding that supports ASCII, UTF-8, UTF-16 and UTF-32"
repository = "https://github.com/bohdloss/anystr"
readme = "README.md"
keywords = ["any", "string", "ascii", "widestring"]
categories = ["no-std", "encoding", "text-processing"]
license = "MIT"
exclude = [".git*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[package.metadata.playground]
features = ["std"]

[dependencies]
parse-display = "0.9.0"
ascii = { version = "1.1.0", features = [] }
widestring = { version = "1.1.0", features = [] }

[features]
default = ["std"]
alloc = ["ascii/alloc", "widestring/alloc"]
std = ["alloc", "ascii/std", "widestring/std"]
unstable = []
